--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-WVMH9C5QEQ"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+                gtag('js', new Date());
+                gtag('config', 'G-WVMH9C5QEQ');
+        </script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>HaimEldatov menschool</title>
         <link rel="stylesheet" type="text/css" href="style.css">
